--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <p>I like math, Linux things, and programming (Python, C, some C++). Here is some stuff you can look at. </p>
 <ul>
 <li>
-<p><a href="/cs/tikzpy/">TikzPy</a>, a Python package I wrote for generating TikZ code (a LaTeX thing) programmatically, which I did because TikZ is powerful graphics library but it's extremely tedious to use.</p>
+<p><a href="/cs/tikzpy/">TikzPy</a>, a Python package I wrote for generating TikZ code (a LaTeX thing) programmatically, which I did because TikZ is a powerful graphics library but it's extremely tedious to use.</p>
 </li>
 <li>
 <p><a href="/static/cat_theory.pdf">An Introductory text on Category Theory</a>. This is a 400 page math textbook I wrote during my undergrad since it tied together a lot of math things I was learning at the time (algebra, topology, geometry). </p>
