Adds post on polynomial grammars

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 <div class="main-content">
 <p>Hi! My name is Luke Trujillo and you've found my website. </p>
-<p>I like math, Linux things, and programming (Python, C, some C++). Here is some stuff you can look at. </p>
+<p>I like math, Linux things, and programming (Python, C, Rust). Here is some stuff you can look at. </p>
 <ul>
 <li>
 <p><a href="/cs/tikzpy/">TikzPy</a>, a Python package I wrote for generating TikZ code (a LaTeX thing) programmatically, which I did because TikZ is a powerful graphics library but it's extremely tedious to use.</p>
@@ -43,6 +43,18 @@
 </ul>
 <div class="line"></div>
 <article>
+    <div class="preview-box">
+    <div>
+        <h2><a href="/cs/poly_gram/">Context Free Grammar For Polynomials</a></h2>
+        <p class="meta">2022-04-15</p>
+        <p class="summary">
+            I finally figured out how to write a set of productions to correctly characterize polynomial arithmetic in a non-ambiguous fashion. I didn't really see anything&nbsp;<a class="more" href="/cs/poly_gram/">...</a>
+        </p>
+    </div>
+     
+    </div>
+    <div class="line"></div>
+</article><article>
     <div class="preview-box">
     <div>
         <h2><a href="/cs/arch_install/">Arch Linux Install Guide and Dell XPS 9710 Experience</a></h2>
