--- a/about/index.html
+++ b/about/index.html
@@ -17,21 +17,19 @@
         <li><a href="/"> Home </a></li>
         <li><a href="/cs/tikzpy/"> TikzPy </a></li>
         <li><a href="/math/associahedron/"> Associahedron </a></li>
-        <li><a href="/cs/programming_idioms/"> Programming Idioms </a></li>
         <li><a href="/about/"> About </a></li>
     </ul>
     </div>
 <div class="main-content">
 <h1>About</h1>
 <p>The image header above is a long exposure on Palomar Mountain, California from a high point above the clouds, sometime after the sun had gone down.</p>
-<p>Originally, I was supposed to be a mathematician, probably studying algebraic geometry, as I set myself to attend a pretty good math PhD program after college. But I last-minute chose a career in software engineering instead. (They weren't too happy when I went back on the offer, but that's okay). Ultimately, math is beautiful, but it's just not very useful.</p>
+<p>Originally, I was supposed to be a mathematician, probably studying algebraic geometry, as I set myself to attend a PhD program after college. But I last-minute chose a career in software engineering instead. (They weren't too happy when I went back on the offer, but that's okay). Ultimately, math is beautiful, but so is computer science.</p>
 <h1>Music</h1>
-<p>I listen primarily to metalcore, hardcore, punk, and classical piano. This may seem like a strange combination, but it is because I enjoy listening to complex/unpredictable songs, and the artists tend to be interested in pushing instruments to the limit and finding new forms of musical expression.  </p>
+<p>I listen primarily to metalcore, hardcore, punk, and classical piano. This may seem like a strange combination, but I enjoy listening to complex/unpredictable songs, and the artists tend to be interested in pushing instruments to the limit and finding new forms of musical expression.  </p>
 <p>I also play the electric guitar, mainly playing fast metal songs and some classic rock. My first metal song to learn completely was Master of Puppets by Metallica, which took me about a year of daily playing and cost me tendonitis for weeks a few times. I'm now learning tapping and sweep picking.</p>
 <h1>Tech</h1>
 <p>This is a simple static website I've generated via my own fork of <a href="https://github.com/sunainapai/makesite">makesite.py</a> a beautifully written, minimal static site generator. I prefer it over other tools because I know exactly what the code is doing and the code was written very well. </p>
 <p>I use Intellj IDEs and Zsh both with Vim keybindings, and Tmux/iTerm for terminals. </p>
-<p>I work on an Apple machine which I do not recommend for purely technical reasons. In a nutshell, Mac OS is very bloated and asserts a suffocating amount of control over its users. To see for yourself, simply run "top" or "ps aux" from the terminal and you'll see all of the stupid processes, like Emoji crap or iTunes, that you never asked for but MacOS has decided to run for you anyways.</p>
 </div>
 
 </body>
